load("@rules_cc//cc:defs.bzl", "cc_library")

cc_library(
    name = "AOJ",
    srcs = glob(
        include = [
            "*/*.cc",
            "*/*/*.cc",
        ],
        allow_empty = False,
    ),
    hdrs = glob(
        include = [
            "*/*.h",
            "*/*/*.h",
        ],
        allow_empty = False,
    ),
    visibility = ["//visibility:public"],
    deps = [
        "@googletest//:gtest",
    ],
)
